--- a/client/src/components/loader/loader.css
+++ b/client/src/components/loader/loader.css
@@ -8,10 +8,6 @@ body {
     -moz-osx-font-smoothing: grayscale;
   }
   
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
   
   .center {
     margin: auto;
